[package]
name = "rust_webrtc_web"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.34"
console_error_panic_hook = "0.1.7"
web-sys = {version = "0.3.69", features = [
    "Document",
    "Window",
    "console",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "Event",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    ## Rtc Types
    "RtcConfiguration",
    "RtcPeerConnection",
    "RtcPeerConnectionState",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcDataChannelState",
    "RtcDataChannelType",
    "RtcIceCandidate",
    "RtcIceGatheringState",
    "RtcPeerConnectionIceEvent",
    "RtcSdpType",
    "RtcSessionDescriptionInit",
    "RtcSessionDescription",
    "RtcSignalingState",
]}